chore: 优化api接口，天津审批流设计图
