# docs/swagger.yaml
@@ -26,10 +26,12 @@ definitions:
   policy.ApprovalMut:
     properties:
       actions:
+        description: 申请动作，默认只有connect
         items:
           $ref: '#/definitions/policy.Action'
         type: array
       applicant:
+        description: 申请人AD名,或者email
         type: string
       groups:
         items: {}
@@ -37,12 +39,18 @@ definitions:
       name:
         type: string
       period:
-        $ref: '#/definitions/policy.Period'
+        allOf:
+        - $ref: '#/definitions/policy.Period'
+        description: 审批周期，默认一周
       server_filter:
         $ref: '#/definitions/utils.ServerFilter'
       users:
         items: {}
         type: array
+    required:
+    - applicant
+    - server_filter
+    - users
     type: object
   policy.ApprovalResult:
     properties:
@@ -65,8 +73,32 @@ definitions:
     - OneMonth
     - OneYear
     - Forever
+  policy.PolicyMut:
+    properties:
+      actions:
+        items: {}
+        type: array
+      expires_at:
+        type: string
+      groups:
+        items: {}
+        type: array
+      is_enabled:
+        type: boolean
+      name:
+        type: string
+      server_filter:
+        $ref: '#/definitions/utils.ServerFilter'
+      users:
+        items: {}
+        type: array
+    type: object
   policy.UserMut:
     properties:
+      dingtalk_dept_id:
+        type: string
+      dingtalk_id:
+        type: string
       email:
         type: string
       groups:
@@ -78,6 +110,12 @@ definitions:
         type: string
     required:
     - username
+    type: object
+  policy.UserPatchMut:
+    properties:
+      groups:
+        items: {}
+        type: array
     type: object
   utils.ServerFilter:
     properties:
@@ -192,10 +230,6 @@ paths:
         in: query
         name: user
         type: string
-      - description: group
-        in: query
-        name: group
-        type: string
       produces:
       - application/json
       responses:
@@ -262,7 +296,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/policy.ApprovalMut'
+          $ref: '#/definitions/policy.PolicyMut'
       produces:
       - application/json
       responses:
@@ -291,7 +325,7 @@ paths:
         in: header
         name: Authorization
         type: string
-      - description: name
+      - description: name 支持用户名或者email查询
         in: query
         name: name
         type: string
@@ -333,7 +367,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/policy.UserMut'
+          $ref: '#/definitions/policy.UserPatchMut'
       produces:
       - application/json
       responses:
